--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "module": "esm/index.js",
   "sideEffects": false,
   "scripts": {
-    "test": "NODE_ENV=test BABEL_ENV=commonjs mocha --opts ./test/mocha.opts",
-    "test:unit": "BABEL_ENV=test NODE_ENV=test jest",
+    "test": "BABEL_ENV=test NODE_ENV=test jest",
     "lint": "eslint --ext .js,.jsx lib app test",
     "development": "cd ./app && npm run development",
     "predevelopment": "npm run theme:create",
