--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
   "module": "esm/index.js",
   "sideEffects": false,
   "scripts": {
-    "test": "NODE_ENV=test BABEL_ENV=commonjs mocha --opts ./test/mocha.opts",
-    "test:unit": "BABEL_ENV=test NODE_ENV=test jest",
+    "test": "BABEL_ENV=test NODE_ENV=test jest",
     "lint": "eslint --ext .js,.jsx lib app test",
     "development": "cd ./app && npm run development",
     "predevelopment": "npm run theme:create",
     "theme:create": "node lib/utils/build_theme.js",
-    "build:commonjs": "BABEL_ENV=commonjs babel lib --out-dir commonjs --ignore *.css,*.sss --source-maps inlin",
-    "build:esm": "BABEL_ENV=esm babel lib --out-dir esm --ignore *.css,*.sss --source-maps inlin",
+    "build:commonjs": "BABEL_ENV=commonjs babel lib --out-dir commonjs --ignore *.css,*.sss,*.spec.js,*.spec.jsx --source-maps",
+    "build:esm": "BABEL_ENV=esm babel lib --out-dir esm --ignore *.css,*.sss,*.spec.js,*.spec.jsx --source-maps",
     "build": "npm run build:commonjs && npm run build:esm",
     "prebuild": "npm run clean",
     "clean": "rimraf commonjs && rimraf esm"
