--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "development": "cd ./app && npm run development",
     "predevelopment": "npm run theme:create",
     "theme:create": "node lib/utils/build_theme.js",
-    "build:commonjs": "BABEL_ENV=commonjs babel lib --out-dir commonjs --ignore *.css,*.sss,*.spec.js,*.spec.jsx --source-maps",
-    "build:esm": "BABEL_ENV=esm babel lib --out-dir esm --ignore *.css,*.sss,*.spec.js,*.spec.jsx --source-maps",
-    "build": "npm run build:commonjs && npm run build:esm",
+    "check:types": "tsc --noEmit",
+    "build:commonjs": "BABEL_ENV=commonjs babel lib --out-dir commonjs --extensions \".js,.jsx,.ts,.tsx\" --ignore *.css,*.sss,*.spec.js,*.spec.jsx --source-maps",
+    "build:esm": "BABEL_ENV=esm babel lib --out-dir esm --extensions \".js,.jsx,.ts,.tsx\" --ignore *.css,*.sss,*.spec.js,*.spec.jsx --source-maps",
+    "build": "npm run check:types && npm run build:commonjs && npm run build:esm",
     "prebuild": "npm run clean",
     "clean": "rimraf commonjs && rimraf esm"
   },
@@ -40,6 +41,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "cross-env": "^5.2.0",
     "lib-theme-contructor": "0.0.5",
     "prismjs": "^1.14.0",
     "prop-types": "^15.6.1",
@@ -48,6 +50,8 @@
     "react-popper": "^1.0.2"
   },
   "devDependencies": {
+    "@types/react": "^16.7.18",
+    "@babel/preset-typescript": "^7.1.0",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.2",
     "babel-jest": "^23.6.0",
@@ -69,7 +73,8 @@
     "jsdom": "^11.6.2",
     "jsdom-global": "^3.0.2",
     "rimraf": "^2.6.2",
-    "traverse": "^0.6.6"
+    "traverse": "^0.6.6",
+    "typescript": "^3.2.2"
   },
   "files": [
     "LICENSE.md",
