--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
   "homepage": "https://PeculiarVentures.github.io/react-components/",
   "peerDependencies": {
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "hammerjs": "^2.0.8"
   },
   "dependencies": {
     "classnames": "^2.2.5",
     "cross-env": "^5.2.0",
+    "hammerjs": "^2.0.8",
     "lib-theme-contructor": "0.0.5",
     "prismjs": "^1.14.0",
     "prop-types": "^15.6.1",
@@ -61,6 +63,7 @@
     "@babel/preset-typescript": "^7.1.0",
     "@babel/register": "^7.0.0",
     "@types/classnames": "^2.2.6",
+    "@types/hammerjs": "^2.0.36",
     "@types/react": "^16.7.18",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.2",
