feat(Draggable): Add Draggble demo

--- a/app/package.json
+++ b/app/package.json
@@ -73,6 +73,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "hammerjs": "^2.0.8",
     "lib-react-components": "file:../",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
