--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "build:esm": "BABEL_ENV=esm babel lib --out-dir esm --extensions \".js,.jsx,.ts,.tsx\" --ignore *.css,*.sss,*.spec.js,*.spec.jsx --source-maps",
     "build": "npm run check:types && npm run build:commonjs && npm run build:esm",
     "prebuild": "npm run clean",
-    "clean": "rimraf commonjs && rimraf esm",
-    "clear_jest": "jest --clearCache"
+    "clean": "rimraf commonjs && rimraf esm"
   },
   "repository": {
     "type": "git",
