--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "@babel/preset-typescript": "^7.1.0",
     "@babel/register": "^7.0.0",
     "@types/classnames": "^2.2.6",
+    "@types/enzyme": "^3.1.15",
+    "@types/jest": "^23.3.10",
     "@types/react": "^16.7.18",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.2",
