--- a/app/package.json
+++ b/app/package.json
@@ -21,7 +21,7 @@
     "@types/classnames": "^2.2.6",
     "@types/history": "^4.7.0",
     "@types/node": "^10.11.7",
-    "@types/react": "16.4.18",
+    "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.9",
     "@types/react-redux": "^6.0.9",
     "@types/react-router-dom": "^4.3.1",
@@ -76,9 +76,8 @@
   },
   "dependencies": {
     "classnames": "2.2.6",
-    "lib-react-components": "file:../",
     "history": "4.7.2",
-    "lib-pintl": "0.0.3",
+    "lib-react-components": "file:..",
     "prop-types": "15.6.2",
     "react": "16.5.2",
     "react-async-component": "2.0.0",
