--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "sourceMap": true,
     "stripInternal": true,
     "target": "es5",
-    "typeRoots": ["./node_modules/@types"],
+    "typeRoots": ["node_modules/@types"],
     "outDir": "./esm",
   },
   "include": [
