--- a/app/package.json
+++ b/app/package.json
@@ -48,11 +48,13 @@
     "glob": "^7.1.3",
     "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.7",
+    "loader-utils": "^1.2.1",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.9.3",
     "path": "^0.12.7",
     "raw-loader": "^0.5.1",
     "react-dev-utils": "^5.0.2",
+    "react-docgen-typescript": "^1.12.2",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "^2.0.1",
@@ -78,10 +80,12 @@
     "classnames": "2.2.6",
     "history": "4.7.2",
     "lib-react-components": "file:..",
+    "prismjs": "^1.15.0",
     "prop-types": "15.6.2",
     "react": "16.5.2",
     "react-async-component": "2.0.0",
     "react-dom": "16.5.2",
+    "react-markdown": "^4.0.4",
     "react-router-dom": "4.3.1",
     "react-transition-group": "2.5.0"
   }
