--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/classnames": "^2.2.6",
     "@types/enzyme": "^3.1.15",
     "@types/jest": "^23.3.10",
+    "@types/prismjs": "^1.9.0",
     "@types/react": "^16.7.18",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.2",
