--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@storybook/addon-info": "^4.1.4",
     "@storybook/addon-knobs": "^4.1.4",
     "@storybook/addon-options": "^4.1.4",
+    "@storybook/addon-storysource": "^4.1.4",
     "@storybook/react": "^4.1.4",
     "@types/classnames": "^2.2.6",
     "@types/enzyme": "^3.1.15",
