--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/jest": "^23.3.10",
     "@types/prismjs": "^1.9.0",
     "@types/react": "^16.7.18",
+    "@types/react-dom": "^16.0.11",
     "@types/storybook__addon-info": "^3.4.2",
     "@types/storybook__addon-knobs": "^4.0.0",
     "@types/storybook__react": "^4.0.0",
