--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,37 +1,54 @@
-version: 2
+version: 2.1
+
+defaults: &defaults
+  working_directory: ~/ci-build
+  docker:
+    - image: circleci/node:8.9.3
 
 jobs:
-  build:
-    branches:
-      ignore:
-        - gh-pages
-    docker:
-      - image: circleci/node:8.2.1
+  pre-build:
+    <<: *defaults
     steps:
-      - checkout
+      - checkout:
+          path: ~/ci-build
+      - attach_workspace:
+          at: ~/ci-build
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
-      - run:
-          name: install-npm-dependencies
-          command: 'npm install'
+      - run: npm install
       - save_cache:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
-            - ./node_modules
-      - run:
-          name: run-lint-command
-          command: 'npm run lint'
-      - run:
-          name: run-build-package
-          command: 'npm run build'
-      - run:
-          name: run-test-command
-          command: 'npm run test'
-    #   - deploy:
-    #       name: deploy
-    #       when: on_success
-    #       command: |
-    #         if [ "${CIRCLE_BRANCH}" == "master" ]; then
-    #           # Deploy to gh-pages
-    #           cd app && npm run deploy:gh-pages
-    #         fi
+            - node_modules
+      - persist_to_workspace:
+          root: ~/ci-build
+          paths:
+            - node_modules
+
+  lint:
+    <<: *defaults
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/ci-build
+      - run: npm run lint
+
+  test-unit:
+    <<: *defaults
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/ci-build
+      - run: npm run test
+
+workflows:
+  version: 2
+  lint-test-deploy:
+    jobs:
+      - pre-build
+      - lint:
+          requires:
+            - pre-build
+      - test-unit:
+          requires:
+            - lint
