--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
 .idea
 .vscode
-.DS_Store
+
+*.log
+.DS_STORE
+.awcache
+/coverage
+/tmp
+/dist
 node_modules
 package-lock.json
-*.log
-**/compiled_env.json
-dist
-/cjs
-/esm
-/coverage
-.awcache
