chore(tsconfig): Updated dist path for module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "stripInternal": true,
     "target": "es5",
     "typeRoots": ["node_modules/@types"],
-    "outDir": "./esm",
+    "outDir": "./dist/esm",
   },
   "include": [
     "lib/**/*"
