--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -2,6 +2,6 @@
   "extends": "./tsconfig",
   "compilerOptions": {
       "module": "commonjs",
-      "outDir": "./cjs"
+      "outDir": "./dist/cjs"
   }
 }
