--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@storybook/addon-knobs": "^5.0.11",
     "@storybook/addon-options": "^5.0.11",
     "@storybook/addon-storysource": "^5.0.11",
+    "@storybook/addon-viewport": "^5.0.11",
     "@storybook/react": "^5.0.11",
     "@types/classnames": "^2.2.7",
     "@types/enzyme": "^3.9.1",
