--- a/.eslintrc
+++ b/.eslintrc
@@ -44,6 +44,7 @@
     "jsx-a11y/no-static-element-interactions": 1,
     "jsx-a11y/label-has-for": 1,
     "jsx-a11y/alt-text": 1,
-    "function-paren-newline": 1
+    "function-paren-newline": 1,
+    "jsx-a11y/anchor-has-content": 1
   }
 }
