--- a/app/package.json
+++ b/app/package.json
@@ -43,7 +43,7 @@
     "eval": "^0.1.2",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
-    "favicons-webpack-plugin": "git+https://github.com/donskov/favicons-webpack-plugin.git",
+    "favicons-webpack-plugin": "^1.0.2",
     "fs-extra": "^5.0.0",
     "generate-json-webpack-plugin": "^0.2.2",
     "gh-pages": "^1.1.0",
