feat(main): Added

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,30 @@
-.idea
-.vscode
-.DS_Store
-node_modules
+*~
+*.sw[mnpcod]
 *.log
-/coverage
+*.lock
+*.tmp
+*.tmp.*
+log.txt
+*.sublime-project
+*.sublime-workspace
+
+.idea/
+.vscode/
+.sass-cache/
+.versions/
+coverage/
+collection/
+dist/
+dist-transpiled/
+css/
+node_modules/
+tmp/
+temp/
+$RECYCLE.BIN/
+
+.DS_Store
+Thumbs.db
+UserInterfaceState.xcuserstate
+.env
+
+.package.tmp.json
