--- a/packages/ui-theme/package.json
+++ b/packages/ui-theme/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pv/components-theme",
+  "name": "@pv/ui-theme",
   "version": "0.0.0",
   "private": false,
   "description": "Components theme constructor",
