--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "scripts": {
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ./",
     "clean": "lerna run --parallel clean",
-    "compile": "lerna run compile"
+    "compile": "lerna run compile",
+    "lint:css": "stylelint '**/*.scss'"
   },
   "devDependencies": {
     "@pv/eslint-config": "file:packages/eslint-config",
     "eslint": "^6.8.0",
     "lerna": "^3.20.2",
+    "stylelint": "^13.2.0",
+    "stylelint-config-sass-guidelines": "^7.0.0",
     "typescript": "^3.8.2"
   },
   "dependencies": {}
