--- a/packages/react-components/tsconfig.json
+++ b/packages/react-components/tsconfig.json
@@ -10,6 +10,8 @@
   ],
   "exclude": [
     "src/**/*.spec.ts",
-    "src/**/*.spec.tsx"
+    "src/**/*.spec.tsx",
+    "src/**/*.stories.ts",
+    "src/**/*.stories.tsx"
   ]
 }
