--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -37,10 +37,12 @@
   },
   "devDependencies": {
     "@pv/ui-theme": "file:../ui-theme",
+    "@storybook/addon-actions": "^5.3.14",
     "@storybook/addon-info": "^5.3.14",
     "@storybook/addon-knobs": "^5.3.14",
     "@storybook/addon-storysource": "^5.3.14",
     "@storybook/react": "^5.3.14",
+    "@storybook/source-loader": "^5.3.14",
     "@types/classnames": "^2.2.9",
     "@types/react": "^16.9.22",
     "@types/storybook__addon-info": "^5.2.1",
