--- a/packages/ui-utils/package.json
+++ b/packages/ui-utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pv/ui-utils",
+  "name": "@peculiar/ui-utils",
   "version": "0.0.0",
   "private": false,
   "description": "UI utilities",
