--- a/packages/stylelint-config/package.json
+++ b/packages/stylelint-config/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@peculiar/webpack-build-scripts",
+  "name": "@peculiar/stylelint-config",
   "version": "0.0.0",
   "private": false,
-  "description": "Webpack build scripts",
+  "description": "Stylelint configuration for @peculiar packages",
   "author": "PeculiarVentures Team",
   "homepage": "https://github.com/PeculiarVentures/react-components#readme",
   "license": "MIT",
@@ -12,5 +12,12 @@
   },
   "bugs": {
     "url": "https://github.com/PeculiarVentures/react-components/issues"
+  },
+  "devDependencies": {},
+  "dependencies": {
+    "stylelint-config-sass-guidelines": "^7.0.0"
+  },
+  "peerDependencies": {
+    "stylelint": "^13.2.0"
   }
 }
